Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -127,8 +127,12 @@ Basierend auf wahren Begebenheiten:
 
 Nach einem langen, anstrengenden Drehtag bei der Produktion ihres neuesten Horrorfilms kehrt die junge Schauspielerin Rose Hepburn (Sophie Skelton) in ihr heute Nacht wie leergefegtes Hotel zurück. Weil der reguläre Lift defekt ist, ist sie gezwungen, den alten Lastenaufzug zu benutzen, der dann auch prompt vor dem zwölften Stockwerk steckenbleibt. Mit Rose in der Falle sitzt ein sich etwas seltsam nervös verhaltender Fremder (Stuart Brennan). Niemand hört ihre Hilfeschreie und der Notrufknopf scheint ebenfalls nicht zu funktionieren. Handyempfang haben die zwei ebenfalls nicht und so steigt die Anspannung. Bald muss Rose herausfinden, dass es sich bei dem mit ihr eingeschlossenen Mann um einen Mitarbeiter des für ihren aktuellen Film verantwortlichen Studios handelt und dass er obendrein von ihr besessen scheint. Natürlich schwant ihr Böses und sie befürchtet, dass er diese Situation bewusst herbeigeführt haben könnte. Doch während der Aufzug in bedrohlicher Höhe hängt und jeden Moment in die Tiefe zu stürzen droht, kommen bald noch ganz andere Wahrheiten ans Licht …
 
-
 <p>         
+</p>   
+  <a href="https://123.vitaforas.de/arrival.mp4">
+<img src="https://123.vitaforas.de/arrival.jpg" alt="26" width="100%" height="auto"></a>
+
+Zwölf Alien-Raumschiffe landen auf der Erde in unterschiedlichen Regionen. Die Menschen versuchen mit den Außerirdischen zu kommunizieren, aber niemand versteht die walartigen Laute, die von den Aliens abgesondert werden. Im Auftrag der US-Regierung stellt Colonel Weber darum ein Team um die Linguistin Louise Banks und den Physiker Ian Donnelly zusammen, das eine Kommunikation mit den fremden Wesen herstellen soll, um deren Absichten in Erfahrung zu bringen. In Montana, wo eines der Schiffe über dem Boden schwebt, machen sich die beiden an die Arbeit – er, der rationale Naturwissenschaftler mit klarer Ansicht zu den Dingen, sie mit ihrem Sprachverständnis und ihrer ansteckenden Entdeckungsfreude. Doch bald beginnt ein Rennen gegen die Zeit, bei dem es um nicht weniger als den Fortbestand der Menschheit geht …<p>         
 </p>   
   <a href="https://123.vitaforas.de/jupiter.mp4">
 <img src="https://123.vitaforas.de/jupit.jpg" alt="26" width="100%" height="auto"></a>
