Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Nach einem langen, anstrengenden Drehtag bei der Produktion ihres neuesten Horro
 <p>         
 </p>   
   <a href="https://123.vitaforas.de/creator.mp4">
-<img src="https://123.vitaforas.de/creamor.jpg" alt="26" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/creator.jpg" alt="26" width="100%" height="auto"></a>
 
 Die Welt in der Zukunft: Die Menschen führen einen erbitterten Krieg gegen Künstliche Intelligenzen. Währenddessen hat Ex-Agent Joshua (John David Washington) aber ganz andere Sorgen, denn seine Ehefrau Maya (Gemma Chan) ist verschwunden. Doch manchmal hat sich das Universum gegen einen verschworen und schickt einen Spezialauftrag, der über das Schicksal der Menschheit entscheiden könnte. Joshua soll den sogenannten „Schöpfer“ ausfindig machen, einen K.I.-Entwickler, der eine mysteriöse Waffe erschaffen haben soll. Diese könnte den Krieg beenden – aber auch die gesamte Menschheit auslöschen. Joshua und sein Team von fähigen Elitesoldaten müssen sich tief ins K.I.-Gebiet vorwagen und machen inmitten des grausigen Kriegsgeschehens eine überraschende Entdeckung: Die mysteriöse Waffe gibt es tatsächlich, nur in so nicht erwarteter Gestalt. Sie sieht aus wie ein kleines Kind, das in Wahrheit jedoch auch eine K.I. ist.
 <p>         
