Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Basierend auf wahren Begebenheiten:
 
 <p>         
 </p>   
- <a href="https://123.vitaforas.de/jackpot.mp4">
+ <a href="https://123.vitaforas.de/Jackpot.mp4">
 <img src="https://123.vitaforas.de/jackpot.jpg" alt="26" width="100%" height="auto"></a>
 
 Jackpot - Vier Nieten landen einen Treffer  (2011 ‧ Krimi/Drama)
