Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -120,6 +120,15 @@ Neu:
 <img src="https://123.vitaforas.de/underdoggs.jpg" alt="26" width="100%" height="auto"></a>
 
 Als der ehemalige Football-Star Jaycen „Two Js“ Jennings (Snoop Dogg) einen schweren Autounfall verursacht, wird er von einer Richterin zur Strafe zu gemeinnütziger Arbeit verdonnert. Jennings soll ein Junior-Football-Team trainieren, das ausschließlich aus Schülern aus problematischen Verhältnissen besteht. Darauf hat der vom Leben bisher verwöhnte Ex-Profi zunächst natürlich überhaupt keine Lust. Doch nachdem er seinen vorübergehenden neuen Job angetreten hat, wachsen ihm nach so mancher Startschwierigkeit die Kids immer mehr ans Herz und sein Werdegang scheint die lange benötigte Wende zu nehmen.
+
+
+<p>         
+</p>   
+
+ <a href="https://tv.vitaforas.de/napoleon.mp4">
+<img src="https://tv.vitaforas.de/napoleon.jpg" alt="26" width="100%" height="auto"></a>
+
+Es ist eine Zeit des Umbruchs: Im Chaos der Französischen Revolution verlieren Marie-Antoinette (Catherine Walker) und viele andere einflussreiche Personen des französischen Hochadels auf der Guillotine ihren Kopf. In diesem entstandenen Vakuum strebt der korsische Artillerie-Kommandant Napoleon Bonaparte (Joaquin Phoenix) in der neuen Französischen Republik nach Macht. Nach einigen geschickten Militär-Diensten, darunter etwa die Rückeroberung von Toulon im Jahr 1793 sowie dem brutalen Niederschlagen des royalistischen Aufstandes im Jahr 1795, steigt der junge Napoleon in der Gunst und wird erst zum General und später dann zum Anführer seiner eigenen Armee. Doch neben dem Krieg gibt es für den aufstrebenden Feldherrn noch eine weitere Leidenschaft. Er verliebt sich in Joséphine de Beauharnais (Vanessa Kirby), deren erster Ehemann in den Nachwehen der Revolution hingerichtet wurde. Doch auch wenn ihre Beziehung leidenschaftlich geführt wird, kommt es immer wieder zu heftigen Auseinandersetzungen. Diese destruktive Beziehung und der nicht enden wollende Kampf um gesellschaftliche und politische Anerkennung bringen Napoleon an den Rand der Zerstörung..
 <p>         
 </p>   
 
