Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -129,6 +129,16 @@ Als der ehemalige Football-Star Jaycen „Two Js“ Jennings (Snoop Dogg) einen 
 <img src="https://123.vitaforas.de/napoleon.jpg" alt="26" width="100%" height="auto"></a>
 
 Es ist eine Zeit des Umbruchs: Im Chaos der Französischen Revolution verlieren Marie-Antoinette (Catherine Walker) und viele andere einflussreiche Personen des französischen Hochadels auf der Guillotine ihren Kopf. In diesem entstandenen Vakuum strebt der korsische Artillerie-Kommandant Napoleon Bonaparte (Joaquin Phoenix) in der neuen Französischen Republik nach Macht. Nach einigen geschickten Militär-Diensten, darunter etwa die Rückeroberung von Toulon im Jahr 1793 sowie dem brutalen Niederschlagen des royalistischen Aufstandes im Jahr 1795, steigt der junge Napoleon in der Gunst und wird erst zum General und später dann zum Anführer seiner eigenen Armee. Doch neben dem Krieg gibt es für den aufstrebenden Feldherrn noch eine weitere Leidenschaft. Er verliebt sich in Joséphine de Beauharnais (Vanessa Kirby), deren erster Ehemann in den Nachwehen der Revolution hingerichtet wurde. Doch auch wenn ihre Beziehung leidenschaftlich geführt wird, kommt es immer wieder zu heftigen Auseinandersetzungen. Diese destruktive Beziehung und der nicht enden wollende Kampf um gesellschaftliche und politische Anerkennung bringen Napoleon an den Rand der Zerstörung..
+
+
+<p>         
+</p>   
+
+ <a href="https://123.vitaforas.de/argylle.mp4">
+<img src="https://123.vitaforas.de/argylle.jpg" alt="26" width="100%" height="auto"></a>
+
+Die schüchterne Bestseller-Autorin Elly Conway (Bryce Dallas Howard) verbringt ihre Abende am liebsten zurückgezogen vor ihrem Computer mit dem Schreiben eines neuen Teils ihrer erfolgreichen Roman-Reihe rund um die gefährlichen Abenteuer des eleganten Superspions Argylle (Henry Cavill). Eines Tages eröffnet ihr aber der nur allzu echte Geheimagent Aidan (Sam Rockwell), dass die Geschichten aus ihrer Feder offenbar aus irgendeinem Grund Auswirkungen auf die reale Welt um sie herum haben. Während die stets von ihrer Katze Alfie begleitete Schriftstellerin und ihr auf Katzen ziemlich allergischer neuer Wegbegleiter Aidan also auf der einen Seite immer tiefer in eine weltumspannende Spionage-Verschwörung verstrickt werden, scheinen auf der anderen Seite die Grenzen zwischen Realität und Ellys Roman-Universum immer weiter zu verschwimmen...
+
 <p>         
 </p>   
 
