Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@ Jetzt Streamen [[Beekeeper]] / Watch NOW! :
 Jason Statham als unscheinbarer Imker mit Kampfqualitäten
 Der Trailer, der nun auch auf Deutsch erschienen ist.
 
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/kamin.mp4">
+<img src="https://123.vitaforas.de/kamin.jpg" alt="26" width="100%" height="auto"></a>
+
+4K 3 Stunden Entspanntes abbrennen ohne Schleife. Realistischers Feuer. So wie es sein soll. free your Sense 
+
  <p>         
 </p>         
 
