Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@ Der Trailer, der nun auch auf Deutsch erschienen ist.
  <a href="https://123.vitaforas.de/kamin.mp4">
 <img src="https://123.vitaforas.de/kamin.jpg" alt="26" width="100%" height="auto"></a>
 
-4K 3 Stunden Entspanntes abbrennen ohne Schleife. Realistischers Feuer. So wie es sein soll. free your Senses
-
+4K 3 Stunden realistisch, entspannt abbrennendes Feuer. So wie es sein soll.
  <p>         
 </p>         
 
