Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@ Der Trailer, der nun auch auf Deutsch erschienen ist.
 <img src="https://123.vitaforas.de/kamin.jpg" alt="26" width="100%" height="auto"></a>
 
 4K 3 Stunden realistisch, entspannt abbrennendes Feuer. So wie es sein soll.
+
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/monk.mp4">
+<img src="https://123.vitaforas.de/monk.jpg" alt="26" width="100%" height="auto"></a>
+
+Privatdetektiv Adrian Monk (Tony Shalhoub) kehrt zurück, um einen letzten, sehr persönlichen Fall zu lösen: Seine Stieftochter Molly (Caitlin McGee), eine Filmkritikerin, ist glücklich liiert mit ihrem Reporter-Kollegen Griffin Briggs (Austin Scott) und will diesen nun heiraten. Alle Vorbereitungen laufen, doch kurz vor der Eheschließung stirbt ihr Zukünftiger bei einem Bungee-Sprung. Molly wendet sich an ihren Stiefvater und bittet ihn, zu ermitteln, denn sie glaubt nicht an einen Unfall – der Milliardär Rick Eden (James Purefoy) hatte offenbar in den letzten Wochen vergeblich versucht, ihren Beinahe-Ehemann zu bestechen, nachdem der ihn verdächtigt hatte, einen Mord begangen zu haben. Adrian Monk setzt alles daran, zu beweisen, dass Eden für die beiden Todesfälle verantwortlich ist, doch seine zahlreichen Neurosen stehen ihm dabei mitunter im Wege.
  <p>         
 </p>         
 
