Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1542,6 +1542,12 @@ Bill (Martin Starr) erbt das ländliche Anwesen seines Onkels in Norwegen, nachd
 
  <p>         
 </p>
+<a href="https://123.vitaforas.de/park.mp4">
+<img src="https://123.vitaforas.de/park.jpg" alt="25" width="100%" height="auto"></a>
+
+Fiona ist Managerin des Freizeitparks Liseberg und hat die Aufgabe, sich um eine Gruppe Kindheitsfreunde zu kümmern, die einen exklusiven Park-Aufenthalt zu Halloween gewonnen haben – eine ganze Nacht lang, vollkommen allein. Ausgelassen genießt die Truppe unter der Aufsicht von Fiona das Event in vollen Zügen, mit rauen Mengen Zuckerwatte und Popcorn sowie adrenalingeladenen Achterbahnenfahrten in völliger Dunkelheit und dem über allem Schwebenden Grusel der Halloween-Nacht. Doch der Spaß findet ein jähes Ende, als den Jugendlichen klar wird, dass sie auf dem Gelände scheinbar doch nicht ganz alleine sind. Was anfangs noch wie ein Traum erschien, wird im Handumdrehen zum wahren Alptraum und der abgelegene Freizeitpark zur tödlichen Falle. Zwischen Fahrgeschäften und Geisterbahnen treten plötzlich alte Sünden ans Tageslicht und zwingen die Freunde dazu, sich den Dämonen ihrer Vergangenheit zu stellen, während sie gleichzeitig verzweifelt versuchen, diese Nacht irgendwie zu überleben.
+ <p>         
+</p>
 <a href="https://tv.vitaforas.de/killroom.mp4">
 <img src="https://tv.vitaforas.de/bildname7.jpg" alt="25" width="100%" height="auto"></a>
 
