--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@ __________________☁️
   _______     📺📡                                                </p>
 
 
-<img src="https://123.vitaforas.de/white.png"> <p>
-Klick Hier</p>
+<p>Klick Hier</p>
 <img src="unten.png">
 
 
