Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,7 @@ video.play();
 
        <p>
 </p>
-       🔧 Hosted in Germany 🇩🇪
+     🎥 Watch @ StreamTV 🎬
 
  <p>         
 </p>
@@ -1394,16 +1394,7 @@ Für Chloe (im Original gesprochen von Becky G.) und ihre Mutter beginnt ein neu
 
  <p>         
 </p>
-    Mail: kontakt@vitaforas.de 
-
-<p> 
-</p>  
-
-
-
-        <p>
-<img src="https://tv.vitaforas.de/white.png"> 
-</p>
+    
 
 
         <p>
@@ -1446,7 +1437,7 @@ Für Chloe (im Original gesprochen von Becky G.) und ihre Mutter beginnt ein neu
         <p>
 
 
-☁️ Hosted © by vitaforas 🛡️
+🛡️ Cloud Streaming @ StreamTV ☁️
 
 
 </p>
@@ -1796,12 +1787,8 @@ Der Herr der Ringe:
 
 
 <p> 
-..oder Klick<a href="https://www.appcreator24.com/app2632089-shrjv9"> HIER</a> und<br /> schau in die vitaforas App.
-</p>         
-
-<p> 
 Web Services & More. 🐝
-Hosted by vitaforas
+
 </p>         
 <p> 
 
@@ -1813,15 +1800,6 @@ Hosted by vitaforas
 
 
 
-
- <p> # 🛍️Klick<a href="https://www.spreadshirt.de/shop/user/.vitaforas/?srEdit=pa#?affiliateId=1257693"> HIER</a> und Besuche<br /> unseren SpreadShop 👕🛒</p>    
-
-
- <p> # 🖥️Klick<a href="https://youtube.com/@vitaforas2869"> HIER</a> für einen Besuch<br /> des vitaforas YouTube Kanals 🎬🎥</p>    
-
-
-
- <p> # 💰Und gerne Klick<a href="https://www.paypal.me/vitaforas"> HIER</a> und <br /> unterstütze uns mit Verwendungszweck 'Spende' über PayPal 🪙💸</p>    
 
 
 
