Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1787,8 +1787,7 @@ Der Herr der Ringe:
 </p>   
 Nils Holgerson:
 <iframe width="100%" height="auto"
-src="https://youtube.com/playlist?list=PLeuERMbcTwtjXystZrmIsuMORy0ePpso_&si=X8k-WuKkvA5pTzJz&autoplay=0"frameborder="0"
-allowfullscreen></iframe>
+src="https://youtube.com/playlist?list=PLeuERMbcTwtjXystZrmIsuMORy0ePpso_&si=3epV6R4rjUYluyjR></iframe>
 
 
  </p>  
