--- a/index.html
+++ b/index.html
@@ -108,7 +108,12 @@ Der Trailer, der nun auch auf Deutsch erschienen ist.
 
 <p>         
 </p>  
-https://www.youtube.com/playlist?list=PLeuERMbcTwtjXystZrmIsuMORy0ePpso_&feature=shared
+
+
+ <a href="https://www.youtube.com/playlist?list=PLeuERMbcTwtjXystZrmIsuMORy0ePpso_&feature=shared">
+<img src="https://123.vitaforas.de/nilsholgersson.jpg" alt="26" width="100%" height="auto"></a>
+
+Die wunderbaren Reisen des Nils Holgersson
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/kamin.mp4">
