Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@ Jetzt Streamen [[Beekeeper]] / Watch NOW! :
  
  In "The Beekeeper" schlüpft Jason Statham in die Rolle eines unscheinbaren Bienenzüchter. In "The Beekeeper" zeigt sich Jason Statham mal wieder von seiner feinsten Seite.
 Jason Statham als unscheinbarer Imker mit Kampfqualitäten
-Der Trailer, der nun auch auf Deutsch erschienen ist.
 
 <p>         
 </p>   
@@ -88,7 +87,14 @@ Der Trailer, der nun auch auf Deutsch erschienen ist.
 
 4K 3 Stunden realistisch, entspannt abbrennendes Feuer. So wie es sein soll.
 
+<p>         
+</p>  
 
+
+ <a href="https://youtube.com/playlist?list=PLeuERMbcTwtjXystZrmIsuMORy0ePpso_&si=YWQp8sryhtfr_Tgm">
+<img src="https://123.vitaforas.de/nilsholgersson.jpg" alt="26" width="100%" height="auto"></a>
+
+Die wunderbaren Reisen des Nils Holgersson
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/monk.mp4">
