Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -86,12 +86,11 @@ Jason Statham als unscheinbarer Imker mit Kampfqualitäten
 <img src="https://123.vitaforas.de/kamin.jpg" alt="26" width="100%" height="auto"></a>
 
 4K 3 Stunden realistisch, entspannt abbrennendes Feuer. So wie es sein soll.
-
 <p>         
 </p>  
 
 
- <a href="https://youtube.com/playlist?list=PLeuERMbcTwtjXystZrmIsuMORy0ePpso_&si=YWQp8sryhtfr_Tgm">
+ <a href="https://www.youtube.com/playlist?list=PLeuERMbcTwtjXystZrmIsuMORy0ePpso_&feature=shared">
 <img src="https://123.vitaforas.de/nilsholgersson.jpg" alt="26" width="100%" height="auto"></a>
 
 Die wunderbaren Reisen des Nils Holgersson
