Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@ Jason Statham als unscheinbarer Imker mit Kampfqualitäten
 </p>  
 
 
- <a href="https://www.youtube.com/playlist?list=PLeuERMbcTwtjXystZrmIsuMORy0ePpso_&feature=shared">
-<img src="https://123.vitaforas.de/nilsholgersson.jpg" alt="26" width="100%" height="auto"></a>
-
+ <p>         
+</p>   
+<iframe width="100%" height="auto"
+src="https://youtube.com/playlist?list=PLeuERMbcTwtjXystZrmIsuMORy0ePpso_&si=3epV6R4rjUYluyjR></iframe>
 Die wunderbaren Reisen des Nils Holgersson
 <p>         
 </p>   
