Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -87,13 +87,11 @@ Jason Statham als unscheinbarer Imker mit Kampfqualitäten
 
 4K 3 Stunden realistisch, entspannt abbrennendes Feuer. So wie es sein soll.
 <p>         
-</p>  
+</p>
 
+ <a href="https://youtube.com/playlist?list=PLeuERMbcTwtjXystZrmIsuMORy0ePpso_&si=YWQp8sryhtfr_Tgm">
+<img src="https://123.vitaforas.de/nilsholgersson.jpg" alt="26" width="100%" height="auto"></a>
 
- <p>         
-</p>   
-<iframe width="100%" height="auto"
-src="https://youtube.com/playlist?list=PLeuERMbcTwtjXystZrmIsuMORy0ePpso_&si=3epV6R4rjUYluyjR></iframe>
 Die wunderbaren Reisen des Nils Holgersson
 <p>         
 </p>   
