--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@ Jason Statham als unscheinbarer Imker mit Kampfqualitäten
 </p>
 
  <a href="https://youtube.com/playlist?list=PLeuERMbcTwtjXystZrmIsuMORy0ePpso_&si=YWQp8sryhtfr_Tgm">
-<img src="https://123.vitaforas.de/nilsholgersson.jpg" alt="26" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/nils1.jpg" alt="26" width="100%" height="auto"></a>
 
-Die wunderbaren Reisen des Nils Holgersson
+Die wunderbaren Reisen des Nils Holgersson (YT Playlist)
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/monk.mp4">
