Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Jason Statham als unscheinbarer Imker mit Kampfqualitäten
  <a href="https://youtube.com/playlist?list=PLeuERMbcTwtjXystZrmIsuMORy0ePpso_&si=YWQp8sryhtfr_Tgm">
 <img src="https://123.vitaforas.de/nils1.jpg" alt="26" width="100%" height="auto"></a>
 
-Die wunderbaren Reisen des Nils Holgersson (YT Playlist)
+Die wunderbaren Reisen des Nils Holgersson
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/monk.mp4">
