Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1375,7 +1375,11 @@ YouTube Playlist 👇🏼
 Die wunderbaren Reisen des Nils Holgersson
  <p>         
 </p>
-    
+
+YouTube Playlist 👇🏼
+ <a href="https://youtube.com/playlist?list=PLck52jl6FxKaZGj2l783GIaPVfdz2i3mm&si=25oSkQHBggejV4C7">
+<img src="https://123.vitaforas.de/heidi.jpg" alt="26" width="100%" height="auto"></a>
+   Heidi
 
 
         <p>
