Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1760,7 +1760,8 @@ Die unendliche Geschichte:
 Der Herr der Ringe:
         <p>         
 </p>         
- 
+ Furze Music 👇🏼
+https://youtube.com/playlist?list=PLyDMhf59jkBJkotY7Zjlppc3T-qwSpShW&si=GD0y-ZTXW3MH_AHx
  <p>         
 </p>   
 
