Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1761,7 +1761,8 @@ Der Herr der Ringe:
         <p>         
 </p>         
  Furze Music 👇🏼
-https://youtube.com/playlist?list=PLyDMhf59jkBJkotY7Zjlppc3T-qwSpShW&si=GD0y-ZTXW3MH_AHx
+ <a href="https://youtube.com/playlist?list=PLyDMhf59jkBJkotY7Zjlppc3T-qwSpShW&si=GD0y-ZTXW3MH_AHx">
+<img src="https://123.vitaforas.de/furze.jpg" alt="26" width="100%" height="auto"></a>
  <p>         
 </p>   
 
