--- a/index.html
+++ b/index.html
@@ -1762,7 +1762,7 @@ Der Herr der Ringe:
 </p>         
  Furze Music 👇🏼
  <a href="https://youtube.com/playlist?list=PLyDMhf59jkBJkotY7Zjlppc3T-qwSpShW&si=GD0y-ZTXW3MH_AHx">
-<img src="https://123.vitaforas.de/furze.jpg" alt="26" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/colin.jpg" alt="26" width="100%" height="auto"></a>
  <p>         
 </p>   
 
