Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1760,7 +1760,7 @@ Die unendliche Geschichte:
 Der Herr der Ringe:
         <p>         
 </p>         
- Furze Music 👇🏼
+ Colin Furze Music 👇🏼
  <a href="https://youtube.com/playlist?list=PLyDMhf59jkBJkotY7Zjlppc3T-qwSpShW&si=GD0y-ZTXW3MH_AHx">
 <img src="https://123.vitaforas.de/colin.jpg" alt="26" width="100%" height="auto"></a>
  <p>         
