Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -69,12 +69,13 @@ Klick Hier
 
 
 
- <p># Klick<a href="https://apk.e-droid.net/apk/app2925093-0w1dcx.apk?v=7"> HIER</a> zum App Download >
- </p>
-        <p>   
+ <p></p>
+ 
+# Klick<a href="https://apk.e-droid.net/apk/app2925093-0w1dcx.apk?v=7"> HIER</a> zum App Download >
+           
 StreamTV App 👉🏼<a href="https://t.ly/-U5ed"> <img src="https://123.vitaforas.de/StreamTV.png" alt="2" width="40%" height="auto"></a>
 
-
+<p>
 </p>     
 
 Jetzt Streamen [[Beekeeper]] / Watch NOW! :
