Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                                                         <div class="inner">
                                                                 <h1>StreamTV</h1>
 
+ <p>   
+<a href="https://t.ly/-U5ed"> <img src="https://123.vitaforas.de/TVbanner.jpg" alt="2" width="100%" height="auto"></a>
+</p>     
+
 Kein Login, keine Werbung, just Watch !
  <p>
 </p>
