Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -65,12 +65,6 @@ Klick Hier
 </p>         
 
 
-
-
-<p>   
-<a href="https://t.ly/-U5ed"> <img src="https://123.vitaforas.de/TVbanner.jpg" alt="2" width="100%" height="auto"></a>
-</p>     
-
  <p>
 </p>     
 
@@ -81,6 +75,27 @@ Jetzt Streamen [[Beekeeper]] / Watch NOW! :
  
  In "The Beekeeper" schlüpft Jason Statham in die Rolle eines unscheinbaren Bienenzüchter. In "The Beekeeper" zeigt sich Jason Statham mal wieder von seiner feinsten Seite.
 Jason Statham als unscheinbarer Imker mit Kampfqualitäten
+
+
+__________
+
+Viele Mediaplayer der Browser starten Filme nicht zuverlässig, daher..
+
+Bester Browser 👉🏼
+<a href="https://play.google.com/store/apps/details?id=org.mozilla.fenix">
+<img src="https://123.vitaforas.de/fenix.jpg" alt="2" width="10%" height="auto"></a>
+
+Bei Problemen einfach Cache löschen & weiter geht's. [Funktioniert auch für iPhone]
+
+Alternativ 👉🏼
+<a href="https://play.google.com/store/apps/details?id=org.mozilla.klar">
+<img src="https://123.vitaforas.de/klar.jpg" alt="2" width="10%" height="auto"></a>
+ 
+
+<p>   
+<a href="https://t.ly/-U5ed"> <img src="https://123.vitaforas.de/TVbanner.jpg" alt="2" width="100%" height="auto"></a>
+</p>  
+__________
 
 <p>         
 </p>   
