Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -77,22 +77,23 @@ Jetzt Streamen [[Beekeeper]] / Watch NOW! :
 Jason Statham als unscheinbarer Imker mit Kampfqualitäten
 
 
+ <p>
+</p> 
 __________
 
 Viele Mediaplayer der Browser starten Filme nicht zuverlässig, daher..
 
-Bester Browser 👉🏼
+Bester Browser 👇🏼 Alternativ 👇🏼
+
 <a href="https://play.google.com/store/apps/details?id=org.mozilla.fenix">
-<img src="https://123.vitaforas.de/fenix.jpg" alt="2" width="10%" height="auto"></a>
+<img src="https://123.vitaforas.de/fenix.jpg" alt="2" width="45%" height="auto"></a>
 
-Bei Problemen einfach Cache löschen & weiter geht's. [Funktioniert auch für iPhone]
-
-Alternativ 👉🏼
 <a href="https://play.google.com/store/apps/details?id=org.mozilla.klar">
-<img src="https://123.vitaforas.de/klar.jpg" alt="2" width="10%" height="auto"></a>
- 
+<img src="https://123.vitaforas.de/klar.jpg" alt="2" width="45%" height="auto"></a>
 
-<p>   
+ Bei Problemen einfach Cache löschen & weiter geht's. [Funktioniert auch für iPhone]
+
+<p>   Bessere Wahl:
 <a href="https://t.ly/-U5ed"> <img src="https://123.vitaforas.de/TVbanner.jpg" alt="2" width="100%" height="auto"></a>
 </p>  
 __________
