Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ Jason Statham als unscheinbarer Imker mit Kampfqualitäten
 </p> 
 __________
 
-Viele Mediaplayer der Browser starten Filme nicht zuverlässig, daher..
+<p> Viele Mediaplayer der Browser starten Filme nicht zuverlässig, daher..
+</p>
 
 Bester Browser 👇🏼 Alternativ 👇🏼
 
