Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Klick Hier
                                                 <!-- Intro -->
                                                         <article id="intro">
                                                                 <h2 class="major">[[WATCH FREE]] @</h2>
-                                                                <span class="image main"><img src="https://tv.vitaforas.de/1.jpg" alt="" /></span>
+                                                                <span class="image main"><img src="https://123.vitaforas.de/1.jpg" alt="" /></span>
 
         <p>         
 </p>         
