Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ Die schüchterne Bestseller-Autorin Elly Conway (Bryce Dallas Howard) verbringt 
 <p>         
 </p>   
 
- <a href="https://tv.vitaforas.de/cocain.mp4">
-<img src="https://tv.vitaforas.de/cocain.jpg" alt="26" width="100%" height="auto"></a>
+ <a href="https://123.vitaforas.de/cocain.mp4">
+<img src="https://123.vitaforas.de/cocain.jpg" alt="26" width="100%" height="auto"></a>
 
 1985 stürzt ein randvoll mit Kokain beladenes Flugzeug irgendwo im Nirgendwo über den Wäldern Georgias ab. Sind die mehr als 200 Kilogramm Rauschgift und damit potenziell eine ganze Menge Geld also für immer verloren? Die Eigentümer, eine Handvoll Kriminelle, wollen es eher nicht darauf ankommen lassen und vor Ort lieber auf Nummer sichergehen. Auf der Suche nach dem wertvollen Stoff merken sie jedoch, dass jemand anderes schneller als sie war. Denn fündig geworden ist nämlich ein riesiger Schwarzbär. Und der dreht nun völlig zugedröhnt am Rad. Touristen, ein paar Teenager, Polizisten und auch die Gangster passen auf Koks super ins Beuteschema des monströsen Tieres. Jetzt heißt es nur noch eins: überleben und hoffen, dass die pelzige Kampfmaschine irgendwann von ihrem Trip runterkommt. Doch der Bär ist auf den Geschmack gekommen und will immer mehr von dem weißen Pulver.  
 Basierend auf wahren Begebenheiten:
