Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@ Jupiter Jones wurde unter dem Nachthimmel geboren. Bereits bei ihrer Geburt gab 
 
 <p>         
 </p>   
-  <a href="https://tv.vitaforas.de/moon.mp4">
-<img src="https://tv.vitaforas.de/moon.jpg" alt="26" width="100%" height="auto"></a>
+  <a href="https://123.vitaforas.de/moon.mp4">
+<img src="https://123.vitaforas.de/moon.jpg" alt="26" width="100%" height="auto"></a>
 
 Vor Jahren strandete Kora (Sofia Boutella) in einem Raumschiff auf dem Mond Veldt irgendwo am Rande des Universums. Die Einheimischen nahmen sie freundlich auf, befürchteten aber schon immer, dass Kora von einer Welt stammt, mit der sie lieber niemals Kontakt haben würden. Sie sollen Recht behalten, denn eines Tages taucht der grausame Admiral Noble (Ed Skrein) auf, ein Abgesandter des tyrannischen Imperium-Herrschers Balisarius (Fra Fee), der Veldt unterjochen und ausbeuten möchte, wie er es schon auf vielen weiteren Planeten und Monden zuvor getan hat. Doch die Invasoren haben ihre Rechnung ohne die kämpferische Kora gemacht, die ursprünglich aus ihren eigenen Reihen stammt. Gemeinsam mit dem kriegerisch gänzlich unerfahrenen Bauern Gunnar (Michiel Huisman) bricht sie zu verschiedenen Nachbargestirnen auf, um die dortigen Bewohner davon zu überzeugen, sich einer Rebellion gegen das Imperium anzuschließen.
 
@@ -205,8 +205,8 @@ Vor Jahren strandete Kora (Sofia Boutella) in einem Raumschiff auf dem Mond Veld
 Aus Erde und Dreck wuchs ein Mädchen. Anders als alle anderen. Ihre Zähne waren weiß wie Schnee. Ihr Name war Hygeia." Diese Geschichte erzählen sich die Waisenkinder, die von dem geheimnisvollen Sektenführer Fust einst auf eine abgelegene griechische Insel gebracht wurden - gerettet vor einer Welt, die im Schmutz versinkt. Auch die 14-jährige Irina und ihr kleiner Bruder Paul leben hier. Zusammen mit den anderen Kindern hausen sie im Dreck des Kellers unter der makellosen Villa ihres "Retters". Hier stellen sie eine spezielle Seife her, die den Sektenmitgliedern als Sakrileg die absolute Reinheit bringen soll. Als Fust auf die schöne Irina aufmerksam wird und sie auserwählt, zu ihm in die Villa zu ziehen, werden die Geschwister das erste Mal in ihrem Leben getrennt. Irina verspricht, zu ihrem kleinen Bruder zu halten - aber die neue Macht, die sie durch Fust erhält, berauscht sie zusehends.
 
 <p>         
-</p>    <a href="https://tv.vitaforas.de/erde2.mp4">
-<img src="https://tv.vitaforas.de/erde2.jpg" alt="26" width="100%" height="auto"></a>
+</p>    <a href="https://123.vitaforas.de/erde2.mp4">
+<img src="https://123.vitaforas.de/erde2.jpg" alt="26" width="100%" height="auto"></a>
 
 In einer nicht allzu fernen Zukunft dehnt sich die Sonne bedrohlich aus und stellt eine existenzielle Gefahr für die Erde dar. Also beschließt die Vereinte Regierung der Erde, gigantische Raketentriebwerke zu konstruieren, um unseren Planeten von der Sonne wegzubewegen - weit weg von der Reichweite der feurigen Sonneneruptionen. Allerdings stoßen sie auf Widerstand, als Terroristen eine Matrix entwickeln, um das Bewusstsein jedes Menschen zu speichern. Die Reise durch das Universum ist jedoch gefährlich, und die letzte Überlebenschance der Menschheit hängt von einer Gruppe junger Menschen ab, die mutig genug sind, eine gefährliche Operation auf Leben und Tod durchzuführen, um die Erde zu retten.
 
@@ -224,8 +224,8 @@ Japan, 1945: Kurz nach dem Ende des Zweiten Weltkriegs täuscht der Kamikaze-Pil
 Das Fotografenpaar Anne (Alice Eve) und Patrick Caulder (Joel Fry) setzt eine mysteriöse Verkettung von Ereignissen in Gang, als sie zusammen mit ihrem jungen Sohne Lukas (Lenny Rush) an Board des berühmten und geschichtsträchtigen Passagierschiffes Queen Mary kommen. Diese scheinen irgendwie in Verbindung zur Vergangenheit des Schiffes zu stehen, in der offenbar zahlreiche dunkle Geheimnisse verborgen sind. Plötzlich findet sich die Familie also inmitten schrecklichen Terrors wieder und muss mit der sich Stück für Stück offenbarenden Wahrheit umgehen: Der glamourösen Geschichte des Luxusdampfers liegt jede Menge Gewalt zugrunde...
 
 <p>         
-</p>    <a href="https://tv.vitaforas.de/2.mp4">
-<img src="https://tv.vitaforas.de/2.jpg" alt="26" width="100%" height="auto"></a>
+</p>    <a href="https://123.vitaforas.de/2.mp4">
+<img src="https://123.vitaforas.de/2.jpg" alt="26" width="100%" height="auto"></a>
 
 TATE randaliert, um den gewaltsamen Tod seines treuen und vertrauenswürdigen Fußsoldaten zu rächen.  Um den verantwortlichen Bösewicht aufzuspüren, wagt sich TATE über seine Komfortzone Essex hinaus in die dunkle Seite des Soho der 90er Jahre.  Er tritt gegen gewalttätige Bosse an und kämpft sich mit schierer brutaler Gewalt durch tückische Seitenstraßen.  TATE ist auf der Suche nach Rache und schreckt vor nichts zurück, selbst als die Welt um ihn herum zu explodieren beginnt.
 
@@ -462,7 +462,7 @@ Max Klein spendet bei einem Flugzeugabsturz Trost und führt die Überlebenden a
 Außerhalb von Los Angeles, im trockenen und weitläufigen Santa Clarita Valley, leben die Geschwister OJ (Daniel Kaluuya) und Emerald Haywood (Keke Palmer). Sie betreiben eine Pferderanch, die sie von ihrem Vater, dem legendären Pferdetrainer Otis Haywood Sr. (Keith David) geerbt haben, der bei einem unerklärlichen "Metallregen" ums Leben kam. Die Arbeit auf der Ranch stellt sich für die Geschwister als hartes Geschäft heraus und trotz ihres Könnens stehen sie schon bald vor finanziellen Problemen. Die Lage ist ernst und die Geschwister denken darüber nach, die Ranch und damit auch das Erbe ihres Vaters an den nahe gelegenen Vergnügungspark Jupiter's Claim zu verkaufen. Dieser Freizeitpark und Streichelzoo, der täglich schaulustige Besucher in die Gegend lockt und auf der Geschichte und Ästhetik des kalifornischen Goldrausches basiert, liegt gleich neben dem Haywood-Anwesen. Der ehemalige Hollywood-Kinderstar Ricky "Jupe" Park (Steven Yeun) betreibt das Gelände und versucht ganz nebenbei, seiner traumatischen Vergangenheit zu entkommen. OJ und Emerald beginnen auf ihrer riesigen Ranch unerklärliche Phänomene zu beobachten – unheimliche Geräusche, plötzliche Stromausfälle und mysteriöse Wetterphänomene. Als OJ eine fliegende Untertasse über der Farm ausmacht, wollen sie die Ereignisse mit der Kamera festhalten. Die Lage eskaliert, als die Geschwister die fachkundige Hilfe von Angel Torres (Brandon Perea), einem Angestellten des Elektronikgeschäfts Fry's, und dem Regisseur Antlers Holst (Michael Wincott) in Anspruch nehmen. Von nun an überschreiten OJ und Emerald einen Punkt, an dem es kein Zurück mehr gibt ...
 
      <a href="https://zero.vitaforas.de/suzume.mp4">
-<img src="https://zero.vitaforas.de/suzume.jpg" alt="26" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/suzume.jpg" alt="26" width="100%" height="auto"></a>
 
 
 Suzume (Originalstimme: Nanoka Hara, deutsche Stimme: Emilia Raschewski) lebt in der ruhigen Stadt Kyushu und trifft einen jungen Mann „auf der Suche nach Türen". Suzume folgt ihm zu einer Ruine eines verfallenen Gebäudes in den Bergen und findet eine freistehende Tür als wäre sie allein vor der Zerstörung gerettet worden. Suzume fühlt sich von einer unsichtbaren Kraft angezogen und greift nach der Tür – bald darauf öffnet sich in ganz Japan eine Tür nach der anderen. Um das Unheil das auf der anderen Seite lauernde Unheil abzuwehren, müssen sie wieder geschlossen werden. Die Orte, an die sie kommt, haben einen Himmel, an dem alle Tageszeiten miteinander zu verschmelzen scheinen – Sterne, Sonnenuntergang und der Morgenhimmel.
